--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -95,6 +95,7 @@
 #           git commit -m "Sync changes from source repo" || echo "No changes to commit"
 #           git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
 
+
 name: Sync Bundle from Operator Repo to RBC Repo
 
 on:
@@ -130,59 +131,57 @@ jobs:
           path: target_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
 
-      - name: Verify target .clusterserviceversion.yaml exists
-        run: |
-          if [ -z "$(ls target_repo/bundle/manifests/*.clusterserviceversion.yaml 2>/dev/null)" ]; then
-            echo "No .clusterserviceversion.yaml file found in target_repo/bundle/manifests/"
-            exit 1
-          fi
-
       - name: Remove unnecessary fields from CSV
         run: |
           sed -i '/olm.skipRange/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
           sed -i '/replaces/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
 
-      - name: Remove channels and defaultChannel from annotations.yaml
+      - name: Retain current image digests in the RBC repo
         run: |
-          sed -i '/operators.operatorframework.io.bundle.channels.v1:/d' source_repo/bundle/metadata/annotations.yaml
-          sed -i '/operators.operatorframework.io.bundle.channel.default.v1:/d' source_repo/bundle/metadata/annotations.yaml
+          # Backup current image digests
+          cp target_repo/bundle/manifests/*.clusterserviceversion.yaml /tmp/rbc_csv.yaml
+          # Replace image digests in the source CSV with the ones from the target repo
+          for image in $(grep -oP 'image:\s*\K\S+' /tmp/rbc_csv.yaml); do
+            sed -i "s|image: .*|image: $image|g" source_repo/bundle/manifests/*.clusterserviceversion.yaml
+          done
 
-      - name: Backup relatedImages and RELATED_IMAGE fields from target repo
+      - name: Sync RELATED_IMAGE values
         run: |
-          # Create a temporary file for backup
-          cp target_repo/bundle/manifests/*.clusterserviceversion.yaml /tmp/target_csv.yaml
+          # Sync RELATED_IMAGE values from target CSV to source CSV
+          for related_image in $(grep -oP 'RELATED_IMAGE_\w+:\s*\K\S+' /tmp/rbc_csv.yaml); do
+            key=$(echo $related_image | cut -d= -f1)
+            value=$(echo $related_image | cut -d= -f2)
+            sed -i "s|$key=.*|$key=$value|g" source_repo/bundle/manifests/*.clusterserviceversion.yaml
+          done
 
-          # Backup RELATED_IMAGE fields
-          grep -E 'RELATED_IMAGE_[^ ]+' /tmp/target_csv.yaml > /tmp/backup_related_image.txt || echo "No RELATED_IMAGE fields found."
-
-          # Backup relatedImages section (multi-line)
-          awk '/relatedImages:/,/]/' /tmp/target_csv.yaml > /tmp/backup_relatedImages.txt || echo "No relatedImages section found."
-
-      - name: Sync files from source to target repo excluding relatedImages and RELATED_IMAGE fields
+      - name: Compare and Sync Changes
         run: |
-          # Copy everything from source repo to target repo
-          cp -r source_repo/bundle/* target_repo/bundle/
+          # Function to compare and sync files
+          sync_files() {
+            local source_dir=$1
+            local target_dir=$2
+            for file in $(find $source_dir -type f); do
+              relative_path=$(realpath --relative-to="$source_dir" "$file")
+              target_file="$target_dir/$relative_path"
+              if [ -f "$target_file" ]; then
+                if ! diff -q "$file" "$target_file" > /dev/null 2>&1; then
+                  echo "Updating $target_file"
+                  cp "$file" "$target_file"
+                else
+                  echo "No changes in $target_file"
+                fi
+              else
+                echo "New file detected, copying $file to target repo"
+                mkdir -p "$(dirname "$target_file")"
+                cp "$file" "$target_file"
+              fi
+            done
+          }
 
-          # Restore the RELATED_IMAGE fields
-          while read -r line; do
-            key=$(echo "$line" | cut -d: -f1)
-            value=$(echo "$line" | cut -d: -f2- | xargs) # Trim leading spaces from the value
-            # Update only if different
-            if ! grep -q "$key: $value" target_repo/bundle/manifests/*.clusterserviceversion.yaml; then
-              sed -i "/spec:/a $key: $value" target_repo/bundle/manifests/*.clusterserviceversion.yaml
-            fi
-          done < /tmp/backup_related_image.txt
+          # Sync files from source_repo/bundle to target_repo/bundle
+          sync_files "source_repo/bundle" "target_repo/bundle"
 
-          # Restore the relatedImages section
-          if [[ -s /tmp/backup_relatedImages.txt ]]; then
-            # Remove existing relatedImages section first
-            sed -i '/relatedImages:/,/]/d' target_repo/bundle/manifests/*.clusterserviceversion.yaml
-            # Append the backed-up relatedImages section
-            sed -i '/^spec:/r /tmp/backup_relatedImages.txt' target_repo/bundle/manifests/*.clusterserviceversion.yaml
-          fi
-
-      - name: Sync Dockerfile
-        run: |
+          # Sync Dockerfile
           if ! diff -q source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile > /dev/null 2>&1; then
             echo "Updating Dockerfile"
             cp source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile
