--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -130,15 +130,18 @@ jobs:
           path: target_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
 
-      - name: Install rsync
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y rsync
-
       - name: Remove unnecessary fields from CSV
         run: |
           sed -i '/olm.skipRange/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
           sed -i '/replaces/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
+
+      - name: Remove channels and defaultChannel from annotations.yaml
+        run: |
+          # Remove the value associated with operators.operatorframework.io.bundle.channels.v1
+          sed -i 's|operators.operatorframework.io.bundle.channels.v1: .*||g' source_repo/bundle/metadata/annotations.yaml
+    
+          # Remove the value associated with operators.operatorframework.io.bundle.channel.default.v1
+          sed -i 's|operators.operatorframework.io.bundle.channel.default.v1: .*||g' source_repo/bundle/metadata/annotations.yaml
 
       - name: Retain current image digests in the RBC repo
         run: |
@@ -151,20 +154,48 @@ jobs:
 
       - name: Sync RELATED_IMAGE values
         run: |
-          # Sync RELATED_IMAGE values from target CSV to source CSV
-          for related_image in $(grep -oP 'RELATED_IMAGE_\w+:\s*\K\S+' /tmp/rbc_csv.yaml); do
+          # Sync RELATED_IMAGE values from source CSV to target CSV
+          for related_image in $(grep -oP 'RELATED_IMAGE_\w+:\s*\K\S+' source_repo/bundle/manifests/*.clusterserviceversion.yaml); do
             key=$(echo $related_image | cut -d= -f1)
             value=$(echo $related_image | cut -d= -f2)
-            sed -i "s|$key=.*|$key=$value|g" source_repo/bundle/manifests/*.clusterserviceversion.yaml
+            if grep -q "^$key: " target_repo/bundle/manifests/*.clusterserviceversion.yaml; then
+              sed -i "s|^$key: .*|$key: $value|g" target_repo/bundle/manifests/*.clusterserviceversion.yaml
+            fi
           done
 
-      - name: Sync Files Using rsync
+      - name: Compare and Sync Changes
         run: |
-          # Sync bundle directory from source to target using rsync
-          rsync -av --progress source_repo/bundle/ target_repo/bundle/
-
+          # Function to compare and sync files
+          sync_files() {
+            local source_dir=$1
+            local target_dir=$2
+            for file in $(find $source_dir -type f); do
+              relative_path=$(realpath --relative-to="$source_dir" "$file")
+              target_file="$target_dir/$relative_path"
+              if [ -f "$target_file" ]; then
+                if ! diff -q "$file" "$target_file" > /dev/null 2>&1; then
+                  echo "Updating $target_file"
+                  # Instead of overwriting the file, append the changes
+                  cat "$file" >> "$target_file"
+                else
+                  echo "No changes in $target_file"
+                fi
+              else
+                echo "New file detected, copying $file to target repo"
+                mkdir -p "$(dirname "$target_file")"
+                cp "$file" "$target_file"
+              fi
+            done
+          }
+          # Sync files from source_repo/bundle to target_repo/bundle
+          sync_files "source_repo/bundle" "target_repo/bundle"
+          
           # Sync Dockerfile
-          rsync -av --progress source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile
+          if ! diff -q source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile > /dev/null 2>&1; then
+            echo "Updating Dockerfile"
+            cp source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile
+          else
+            echo "No changes in Dockerfile
 
       - name: Commit and Push Changes to Target Repo
         run: |
