--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -131,84 +131,45 @@ jobs:
           path: target_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
 
+      - name: Install required tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y rsync yq
+
       - name: Remove unnecessary fields from CSV
         run: |
           sed -i '/olm.skipRange/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
           sed -i '/replaces/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
 
-      - name: Remove channels and defaultChannel from annotations.yaml
-        run: |
-          # Remove the value associated with operators.operatorframework.io.bundle.channels.v1
-          sed -i 's|operators.operatorframework.io.bundle.channels.v1: .*||g' source_repo/bundle/metadata/annotations.yaml
-    
-          # Remove the value associated with operators.operatorframework.io.bundle.channel.default.v1
-          sed -i 's|operators.operatorframework.io.bundle.channel.default.v1: .*||g' source_repo/bundle/metadata/annotations.yaml
-
       - name: Retain current image digests in the RBC repo
         run: |
           # Backup current image digests
           cp target_repo/bundle/manifests/*.clusterserviceversion.yaml /tmp/rbc_csv.yaml
+          
           # Replace image digests in the source CSV with the ones from the target repo
           for image in $(grep -oP 'image:\s*\K\S+' /tmp/rbc_csv.yaml); do
             sed -i "s|image: .*|image: $image|g" source_repo/bundle/manifests/*.clusterserviceversion.yaml
           done
 
-      - name: Sync RELATED_IMAGE values
+      - name: Sync RELATED_IMAGE values (excluding annotations)
         run: |
-          # Sync RELATED_IMAGE values from source CSV to target CSV
-          for related_image in $(grep -oP 'RELATED_IMAGE_\w+:\s*\K\S+' source_repo/bundle/manifests/*.clusterserviceversion.yaml); do
-            key=$(echo $related_image | cut -d= -f1)
-            value=$(echo $related_image | cut -d= -f2)
-            if grep -q "^$key: " target_repo/bundle/manifests/*.clusterserviceversion.yaml; then
-              sed -i "s|^$key: .*|$key: $value|g" target_repo/bundle/manifests/*.clusterserviceversion.yaml
-            fi
-          done
-
-      - name: Compare and Sync Changes
-        run: |
-          # Function to compare and sync files
-          sync _files() {
-            local source_dir=$1
-            local target_dir=$2
-            for file in $(find $source_dir -type f); do
-              relative_path=$(realpath --relative-to="$source_dir" "$file")
-              target_file="$target_dir/$relative_path"
-              if [ -f "$target_file" ]; then
-                if ! diff -q "$file" "$target_file" > /dev/null 2>&1; then
-                  echo "Updating $target_file"
-                  # Instead of overwriting the file, compare and sync
-                  diff -n "$file" "$target_file" > /tmp/diff.patch
-                  patch -p0 -d "$target_dir" < /tmp/diff.patch
-                else
-                  echo "No changes in $target_file"
-                fi
-              else
-                echo "New file detected, copying $file to target repo"
-                mkdir -p "$(dirname "$target_file")"
-                cp "$file" "$target_file"
-              fi
-            done
-          }
-          # Sync files from source_repo/bundle to target_repo/bundle
-          sync_files "source_repo/bundle" "target_repo/bundle"
+          # Using yq to sync RELATED_IMAGE_* values, excluding the annotations
+          yq eval-all 'select(filename == "source_repo/bundle/manifests/*.clusterserviceversion.yaml") as $source 
+                      | select(filename == "/tmp/rbc_csv.yaml") as $target
+                      | $source.metadata.annotations |= ($target.metadata.annotations | select(. | startswith("RELATED_IMAGE_"))) 
+                      | $source' \
+                      source_repo/bundle/manifests/*.clusterserviceversion.yaml /tmp/rbc_csv.yaml > updated_csv.yaml
           
+          # Replace original CSV with the updated one
+          mv updated_csv.yaml source_repo/bundle/manifests/*.clusterserviceversion.yaml
+
+      - name: Sync Files Using rsync
+        run: |
+          # Sync bundle directory from source to target using rsync
+          rsync -av --progress source_repo/bundle/ target_repo/bundle/
+
           # Sync Dockerfile
-          if [ -f "source_repo/Dockerfiles/bundle.Dockerfile" ]; then
-            target_file="target_repo/Dockerfiles/bundle.Dockerfile"
-            if [ -f "$target_file" ]; then
-              if ! diff -q "source_repo/Dockerfiles/bundle.Dockerfile" "$target_file" > /dev/null 2>&1; then
-                echo "Updating $target_file"
-                diff -n "source_repo/Dockerfiles/bundle.Dockerfile" "$target_file" > /tmp/diff.patch
-                patch -p0 -d "$(dirname "$target_file")" < /tmp/diff.patch
-              else
-                echo "No changes in $target_file"
-              fi
-            else
-              echo "New file detected, copying source_repo/Dockerfiles/bundle.Dockerfile to target repo"
-              mkdir -p "$(dirname "$target_file")"
-              cp "source_repo/Dockerfiles/bundle.Dockerfile" "$target_file"
-            fi
-          fi
+          rsync -av --progress source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile
 
       - name: Commit and Push Changes to Target Repo
         run: |
@@ -218,3 +179,4 @@ jobs:
           git add .
           git commit -m "Sync changes from source repo" || echo "No changes to commit"
           git push origin ${{ github.ref_name }}
+
