--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -185,8 +185,11 @@ jobs:
             key=$(echo "$line" | cut -d: -f1)
             value=$(echo "$line" | cut -d: -f2- | xargs) # Trim leading spaces from the value
             
-            # Use yq to only set the RELATED_IMAGE field if it does not already exist
-            if ! yq eval "has(.spec.containers[].env[] | select(.name == \"$key\"))" target_repo/bundle/manifests/*.clusterserviceversion.yaml; then
+            # Check if the RELATED_IMAGE field already exists
+            existing=$(yq eval ".spec.containers[].env[] | select(.name == \"$key\").value" target_repo/bundle/manifests/*.clusterserviceversion.yaml)
+
+            # If it doesn't exist, add it
+            if [ -z "$existing" ]; then
               yq eval -i ".spec.containers[].env += [{name: \"$key\", value: \"$value\"}]" target_repo/bundle/manifests/*.clusterserviceversion.yaml
             fi
             
@@ -194,14 +197,18 @@ jobs:
 
           # Restore the relatedImages section if it exists
           if [[ -s /tmp/backup_relatedImages.txt ]]; then
-            # Use yq to ensure the relatedImages section is present and append the data
-            yq eval -i '.spec.relatedImages = load("/tmp/backup_relatedImages.txt")' target_repo/bundle/manifests/*.clusterserviceversion.yaml
+            # Check if the relatedImages already exist before setting
+            related_images_present=$(yq eval 'has(.spec.relatedImages)' target_repo/bundle/manifests/*.clusterserviceversion.yaml)
+
+            if [ "$related_images_present" == "false" ]; then
+              # If it doesn't exist, create the relatedImages section
+              yq eval -i '.spec.relatedImages = load("/tmp/backup_relatedImages.txt")' target_repo/bundle/manifests/*.clusterserviceversion.yaml
+            else
+              # If it exists, append the relatedImages (assuming the format is an array)
+              yq eval -i '.spec.relatedImages += load("/tmp/backup_relatedImages.txt")' target_repo/bundle/manifests/*.clusterserviceversion.yaml
+            fi
           fi
 
-      - name: Debug Target YAML File
-        run: |
-          echo "Target CSV after restoration:"
-          cat target_repo/bundle/manifests/*.clusterserviceversion.yaml
 
 
 
